# auto_ref

./: Cargo.toml  README.md
.github/workflows/: ci.yml
auto_ref_impl/: Cargo.toml  README.md
auto_ref_impl/src/: lib.rs
src/: lib.rs
